cmake_minimum_required(VERSION 2.8)
project(TestProject)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/src/imgIO)
include_directories(${INCLUDE_DIR})
set(SOURCES ${INCLUDE_DIR}/ImageHolder.cpp ${INCLUDE_DIR}/ImageHolder.hpp)
find_package(OpenCV REQUIRED)
add_executable(main main.cpp ${SOURCES})
target_link_libraries(main ${OpenCV_LIBS})
